<resources>
    <string name="app_name">MyDistroList</string>
    <string name="title">Nama Distro</string>
    <string name="description">Deskripsi</string>
    <string name="os_type">OS Type</string>
    <string name="based_on">Based on</string>
    <string name="origin">Origin</string>
    <string name="architecture">Architecture</string>
    <string name="desktop">Desktop</string>
    <string name="category">Category</string>
    <string name="share_message">Share this article</string>
    <string name="values_placeholder">value1, value2, value3</string>
    <string name="description_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="profile_name">Muhammad Rizal Nurromdhoni</string>
    <string name="profile_email"> mrizaln2000@gmail.com</string>
    <string name="profile_github">mrizaln</string>
    <string name="profile_linkedin">muhammad-rizal-nurromdhoni</string>
    <string name="profile_picture_linkedin">https://media.licdn.com/dms/image/C4E03AQH4d7QD3omlOw/profile-displayphoto-shrink_800_800/0/1622387165227?e=1683158400&amp;v=beta&amp;t=IFi-qMgR2N_1pDwMkTCByD3zj3gk1YhvB6XeOJT4dM8</string>
    <string name="profile_picture_github">https://avatars.githubusercontent.com/u/61090869?v=4</string>
    <string name="logo_gmail">https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/320px-Gmail_icon_%282020%29.svg.png</string>
    <string name="logo_github">https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/GitHub_Mark.png/246px-GitHub_Mark.png</string>
    <string name="logo_linkedin">https://upload.wikimedia.org/wikipedia/commons/thumb/c/ca/LinkedIn_logo_initials.png/240px-LinkedIn_logo_initials.png</string>
    <string-array name="data_distro">
        <item>Arch Linux</item>
        <item>Debian</item>
        <item>Elementary OS</item>
        <item>Fedora Linux</item>
        <item>Linux Mint</item>
        <item>Manjaro</item>
        <item>OpenSUSE</item>
        <item>Pop!_OS</item>
        <item>Ubuntu</item>
        <item>Zorin OS</item>
    </string-array>
    <string-array name="data_description">
        <item>Arch Linux is an independently developed, x86_64-optimised Linux distribution targeted at competent Linux users. It uses \'pacman\', its home-grown package manager, to provide updates to the latest software applications with full dependency tracking. Operating on a rolling release system, Arch can be installed from a CD image or via an FTP server. The default install provides a solid base that enables users to create a custom installation. In addition, the Arch Build System (ABS) provides a way to easily build new packages, modify the configuration of stock packages, and share these packages with other users via the Arch Linux user repository. (source: https://distrowatch.com/table.php?distribution=arch)</item>
        <item>The Debian Project is an association of individuals who have made common cause to create a free operating system. This operating system is called Debian. Debian systems currently use the Linux kernel. Linux is a completely free piece of software started by Linus Torvalds and supported by thousands of programmers worldwide. Of course, the thing that people want is application software: programs to help them get what they want to do done, from editing documents to running a business to playing games to writing more software. Debian comes with over 50,000 packages (precompiled software that is bundled up in a nice format for easy installation on your machine) - all of it free. It\'s a bit like a tower. At the base is the kernel. On top of that are all the basic tools. Next is all the software that you run on the computer. At the top of the tower is Debian -- carefully organizing and fitting everything so it all works together. (source: https://distrowatch.com/table.php?distribution=debian)</item>
        <item>Elementary OS is an Ubuntu-based desktop distribution. Some of its more interesting features include a custom desktop environment called Pantheon and many custom apps including Photos, Music, Videos, Calendar, Terminal, Files, and more. It also comes with some familiar apps like the Epiphany web browser and a fork of Geary mail. (source: https://distrowatch.com/table.php?distribution=elementary)</item>
        <item>Fedora Linux (formerly Fedora, formerly Fedora Core) is a Linux distribution developed by the community-supported Fedora Project and owned by Red Hat. Fedora Linux contains software distributed under a free and open-source license and aims to be on the leading edge of such technologies. Fedora has a reputation for focusing on innovation, integrating new technologies early on and working closely with upstream Linux communities. The default desktop in Fedora Linux is the GNOME desktop environment and the default interface is the GNOME Shell. Other desktop environments, including KDE, Xfce, LXDE, MATE and Cinnamon, are available. The Fedora project also distributes custom variations of Fedora called Fedora spins. These are built with specific sets of software packages, offering alternative desktop environments or targeting specific interests such as gaming, security, design, scientific computing and robotics. (source: https://distrowatch.com/table.php?distribution=fedora)</item>
        <item>Linux Mint is an Ubuntu-based distribution whose goal is to provide a classic desktop experience with many convenient, custom tools and optional out-of-the-box multimedia support. It also adds a custom desktop and menus, several unique configuration tools, and a web-based package installation interface. Linux Mint is compatible with Ubuntu software repositories. Besides its Ubuntu-based flavour, the project also produces a separate "Debian" edition (called LMDE), based on the latest stable Debian version. (source: https://distrowatch.com/table.php?distribution=mint)</item>
        <item>Manjaro Linux is a fast, user-friendly, desktop-oriented operating system based on Arch Linux. Key features include intuitive installation process, automatic hardware detection, stable rolling-release model, ability to install multiple kernels, special Bash scripts for managing graphics drivers and extensive desktop configurability. Manjaro Linux offers Xfce as the core desktop options, as well as KDE, GNOME and a minimalist Net edition for more advanced users. Community-supported desktop flavours are also available. (source: https://distrowatch.com/table.php?distribution=manjaro)</item>
        <item>The openSUSE project is a community program sponsored by SUSE Linux and other companies. Promoting the use of Linux everywhere, this program provides free, easy access to openSUSE, a complete Linux distribution. The openSUSE project has three main goals: make openSUSE the easiest Linux for anyone to obtain and the most widely used Linux distribution; leverage open source collaboration to make openSUSE the world\'s most usable Linux distribution and desktop environment for new and experienced Linux users; dramatically simplify and open the development and packaging processes to make openSUSE the platform of choice for Linux developers and software vendors. (source: https://distrowatch.com/table.php?distribution=opensuse)</item>
        <item>Pop!_OS is an Ubuntu-based Linux distribution featuring a custom GNOME desktop. Pop!_OS is designed to have a minimal amount of clutter on the desktop without distractions in order to allow the user to focus on work. The distribution is developed by Linux computer retailer System76. (source: https://distrowatch.com/table.php?distribution=popos)</item>
        <item>Ubuntu is a complete desktop Linux operating system, freely available with both community and professional support. The Ubuntu community is built on the ideas enshrined in the Ubuntu Manifesto: that software should be available free of charge, that software tools should be usable by people in their local language and despite any disabilities, and that people should have the freedom to customise and alter their software in whatever way they see fit. "Ubuntu" is an ancient African word, meaning "humanity to others". The Ubuntu distribution brings the spirit of Ubuntu to the software world. (source: https://distrowatch.com/table.php?distribution=ubuntu)</item>
        <item>Zorin OS is an Ubuntu-based Linux distribution designed especially for newcomers to Linux. It has a Windows-like graphical user interface and many programs similar to those found in Windows. Zorin OS also comes with an application that lets users run many Windows programs. The distribution\'s ultimate goal is to provide a Linux alternative to Windows and let Windows users enjoy all the features of Linux without complications. (source: https://distrowatch.com/table.php?distribution=zorin)</item>
    </string-array>
    <string-array name="data_detail">
        <item>Independent;Canada;x86_64;Cinnamon, Enlightenment, GNOME, KDE, LXDE, MATE, Xfce;Desktop, Server;</item>
        <item>Independent;Global;aarch64, armel, armhf, i386, i686, mipsel, ppc64el, s390x, x86_64;AfterStep, Awesome, Blackbox, Cinnamon, Fluxbox, flwm, FVWM, GNOME, i3, IceWM, ion, JWM, KDE, LXDE, LXQt, MATE, Openbox, pekwm, Ratpoison, WMaker, XBMC, Xfce;Desktop, Live Medium, Server;</item>
        <item>Debian, Ubuntu;USA;x86_64;Pantheon;Beginners, Desktop, Live Medium;</item>
        <item>Independent;USA;aarch64, ppc64le, s390x, x86_64; Awesome, Cinnamon, Enlightenment, i3, GNOME, KDE Plasma, LXDE, LXQt, MATE, Openbox, Pantheon, Ratpoison, Xfce;Desktop, Immutable, Server, Live Medium;</item>
        <item>Debian, Ubuntu (LTS);Ireland;i686, x86_64;Cinnamon, MATE, Xfce;Beginners, Desktop, Live Medium;</item>
        <item>Arch Linux;Austria, France, Germany;aarch64, x86_64;Awesome, bspwm, Budgie, Cinnamon, GNOME, i3, KDE Plasma, LXQt, MATE, Openbox, Xfce;Desktop, Live Medium, Raspberry Pi;</item>
        <item>Independent;Germany;aarch64, armhf, i686, ppc64, ppc64el, s390x, x86_64;Cinnamon, Enlightenment, GNOME, IceWM, KDE Plasma, LXDE, LXQt, MATE, Xfce;Desktop, Immutable, Server, Live Medium, Raspberry Pi;</item>
        <item>Ubuntu, Debian;USA;aarch64, x86_64;GNOME;Desktop, Live Medium, Raspberry Pi;</item>
        <item>Debian;Isle of Man;armhf, ppc64el, riscv, s380x, x86_64;GNOME, Unity;Beginners, Desktop, Server, Live Medium;</item>
        <item>Debian, Ubuntu (LTS);Ireland;x86_64;GNOME;Xfce;Beginners, Desktop, Live Medium;</item>
    </string-array>
</resources>