<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_desktop_preview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/desktop_sample"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:padding="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_category_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_based_on_value"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_based_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/based_on"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_based_on_value"
            app:layout_constraintStart_toEndOf="@+id/img_logo"
            app:layout_constraintTop_toTopOf="@+id/tv_based_on_value" />

        <TextView
            android:id="@+id/tv_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_origin_value"
            app:layout_constraintStart_toStartOf="@+id/tv_based_on"
            app:layout_constraintTop_toTopOf="@+id/tv_origin_value" />

        <TextView
            android:id="@+id/tv_desktop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desktop"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_desktop_value"
            app:layout_constraintStart_toStartOf="@+id/tv_architecture"
            app:layout_constraintTop_toTopOf="@+id/tv_desktop_value" />

        <TextView
            android:id="@+id/tv_architecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/architecture"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_architecture_value"
            app:layout_constraintStart_toStartOf="@+id/tv_origin"
            app:layout_constraintTop_toTopOf="@+id/tv_architecture_value"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_category_value"
            app:layout_constraintStart_toStartOf="@+id/tv_desktop"
            app:layout_constraintTop_toTopOf="@+id/tv_category_value" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="225dp" />

        <TextView
            android:id="@+id/tv_based_on_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/values_placeholder"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/img_desktop_preview" />

        <TextView
            android:id="@+id/tv_origin_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/values_placeholder"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_based_on_value" />

        <TextView
            android:id="@+id/tv_architecture_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/values_placeholder"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_origin_value" />

        <TextView
            android:id="@+id/tv_category_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/values_placeholder"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_desktop_value" />

        <TextView
            android:id="@+id/tv_desktop_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/values_placeholder"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_architecture_value" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/colorPrimaryVariant"
            android:justificationMode="inter_word"
            android:padding="8dp"
            android:text="@string/description_placeholder"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_category_value" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/share_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>