<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AboutActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="?attr/colorPrimary"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/profile_name"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <TextView
            android:id="@+id/tv_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="4dp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="4dp"
            android:text="@string/profile_linkedin"
            android:textSize="16sp"
            app:drawableLeftCompat="@android:drawable/ic_menu_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawablePadding="4dp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="4dp"
            android:text="@string/profile_email"
            android:textSize="16sp"
            app:drawableLeftCompat="@android:drawable/ic_menu_view"
            app:layout_constraintEnd_toEndOf="@+id/tv_linkedin"
            app:layout_constraintStart_toStartOf="@+id/tv_linkedin"
            app:layout_constraintTop_toBottomOf="@+id/tv_linkedin" />

        <TextView
            android:id="@+id/tv_github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:drawablePadding="4dp"
            android:gravity="center_horizontal|center_vertical"
            android:padding="4dp"
            android:text="@string/profile_github"
            android:textSize="16sp"
            app:drawableLeftCompat="@android:drawable/ic_menu_view"
            app:layout_constraintEnd_toEndOf="@+id/tv_email"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>